refactor: change swagger update and create, add hash on password on create and update
